// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pitch renders 0 1`] = `
Array [
  .c0 {
  pitch: 0;
}

<div
    className="c0"
  />,
  .c0 {
  pitch: 0;
}

<div
    className="c0"
  />,
  .c0 {
  pitch: 0;
}

<div
    className="c0"
  />,
  .c0 {
  pitch: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`pitch renders function 1`] = `
Array [
  .c0 {
  pitch: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  pitch: has;
}

<div
    className="c0"
  />,
  .c0 {
  pitch: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  pitch: has;
}

<div
    className="c0"
  />,
]
`;

exports[`pitch renders invalid theme path 1`] = `
Array [
  .c0 {
  pitch: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  pitch: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  pitch: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  pitch: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`pitch renders negative number 1`] = `
Array [
  .c0 {
  pitch: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  pitch: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  pitch: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  pitch: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`pitch renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    pitch: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    pitch: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    pitch: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    pitch: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    pitch: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    pitch: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    pitch: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    pitch: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    pitch: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    pitch: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    pitch: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    pitch: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    pitch: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    pitch: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    pitch: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    pitch: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`pitch renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    pitch: July;
  }
}

@media April {
  .c0 {
    pitch: August;
  }
}

@media January {
  .c0 {
    pitch: September;
  }
}

@media April {
  .c0 {
    pitch: November;
  }
}

@media June {
  .c0 {
    pitch: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    pitch: July;
  }
}

@media April {
  .c0 {
    pitch: August;
  }
}

@media January {
  .c0 {
    pitch: September;
  }
}

@media April {
  .c0 {
    pitch: November;
  }
}

@media June {
  .c0 {
    pitch: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    pitch: January;
  }
}

@media April {
  .c0 {
    pitch: December;
  }
}

@media January {
  .c0 {
    pitch: April;
  }
}

@media April {
  .c0 {
    pitch: May;
  }
}

@media June {
  .c0 {
    pitch: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    pitch: January;
  }
}

@media April {
  .c0 {
    pitch: December;
  }
}

@media January {
  .c0 {
    pitch: April;
  }
}

@media April {
  .c0 {
    pitch: May;
  }
}

@media June {
  .c0 {
    pitch: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`pitch renders postitive number 1`] = `
Array [
  .c0 {
  pitch: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  pitch: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  pitch: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  pitch: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`pitch renders string 1`] = `
Array [
  .c0 {
  pitch: July;
}

<div
    className="c0"
  />,
  .c0 {
  pitch: July;
}

<div
    className="c0"
  />,
  .c0 {
  pitch: June;
}

<div
    className="c0"
  />,
  .c0 {
  pitch: June;
}

<div
    className="c0"
  />,
]
`;

exports[`pitch renders valid theme path 1`] = `
Array [
  .c0 {
  pitch: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  pitch: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  pitch: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  pitch: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
